# stellar-trust-escrow

./: .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  docker-compose.override.yml  docker-compose.test.yml  eslint.config.js  package-lock.json  package.json  pr_body.md  pr_description_912.md  rustfmt.toml  task1.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: a11y.yml  accessibility.yml  audit.yml  ci.yml  clippy.yml  coverage.yml  deploy.yml  gas-profiler.yml  gas-profiling.yml  load-tests.yml  nightly-stress-test.yml  release.yml  test-ci.yml  test.yml
.husky/: pre-commit  pre-push
backend/: .env.example  openapi.yaml  package.json  server.js
contracts/escrow_contract/fuzz/: Cargo.toml
contracts/escrow_contract/fuzz/fuzz_targets/: fuzz_create_escrow.rs  fuzz_raise_dispute.rs  fuzz_release_funds.rs  fuzz_submit_ruling.rs
docs/: CONTRIBUTING.md  GLOSSARY.md  api-reference.md  disaster-recovery.md  e2e-sandbox-testing.md  error-codes.md  frontend-components.md  frontend-guide.md  frontend-state-management.md  frontend-testing.md  rent-system.md  smart-contract-guide.md  testnet-deployment.md  webhooks.md
frontend/: .babelrc  jest.config.cjs  jest.config.js  jest.setup.cjs  next.config.js  output.txt  package.json  playwright.config.js  sentry.server.config.js  tailwind.config.js
load-tests/: STRESS-TESTING-GUIDE.md  stress-test.js
mobile/: tsconfig.json
scripts/: a11y-check.js  bundle-report.js  seed.js  test-contract.sh  verify-monitoring.sh
(+369 files in other folders)
